Added sfx and vfx to game. Updated comments
added .wav files and gifs to make the game a tad bit more fun

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
-    <h1>Battleship Game (10x10)</h1>
+    <h1>Battleship</h1>
 
     <!-- Board for placing ships and attacking -->
     <div class="board-wrapper">
