Simple player class & turn system

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,9 @@
         <button id="start-game">Start Attack Phase</button>
     </div>
 
+    <script src="/static/js/Player.js"></script>
     <script src="/static/js/game.js"></script>
     <script src="/static/js/board.js"></script>
+    <script src="/static/js/turnSystem.js"></script>
 </body>
 </html>
