added readme, added fireworks, bug fixes, added python class file
removed bug where you could fire at the same spot infinitely, fixed the bug that I created with sounds and checking if spots are valid, discovered 3 more bugs (in TO-DO on discord)

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -37,3 +37,15 @@
     background-color: lightgray;
     line-height: 30px;
 }
+
+
+#fireworksCanvas {
+    display: none; /* Hide the canvas initially */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    /* z-index: 9999; */
+}
+
