--- a/templates/index.html
+++ b/templates/index.html
@@ -49,9 +49,12 @@
     </div>
     <button id="end-turn" style="display: none;">End Turn</button>
 
+    <canvas id="fireworksCanvas"></canvas>
+    
     <script src="/static/js/Player.js"></script>
     <script src="/static/js/game.js"></script>
     <script src="/static/js/board.js"></script>
     <script src="/static/js/turnSystem.js"></script>
+    <script src="/static/js/fireworks.js"></script>
 </body>
 </html>
