--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,28 @@
     <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
-    <h1 style='text-align: center;'>Battleship</h1>
+    <div class="header">
+        <h1>Battleship</h1>
+    </div>
+
+    <div class="container">
+        <div class="player">
+            <h2>Player One</h2>
+            <div class="hits-misses">
+                <span>Hits: <span id="p1-hits">0</span></span> |
+                <span>Misses: <span id="p1-miss">0</span></span>
+            </div>
+        </div>
+
+        <div class="player">
+            <h2>Player Two</h2>
+            <div class="hits-misses">
+                <span>Hits: <span id="p2-hits">0</span></span> |
+                <span>Misses: <span id="p2-miss">0</span></span>
+            </div>
+        </div>
+    </div>
+
 
     <!-- Board for placing ships and attacking -->
     <div class="board-wrapper" id="p1-wrapper">
