--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -38,6 +38,41 @@
     line-height: 30px;
 }
 
+body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px auto;
+    width: 80%; /* Adjust width to fit within the page */
+}
+
+.header {
+    flex-basis: 100%;
+    margin-bottom: 20px;
+}
+
+.player {
+    flex-basis: 45%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.hits-misses {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+}
+
+.hits-misses span {
+    margin: 0 10px;
+}
 
 #fireworksCanvas {
     display: none; /* Hide the canvas initially */
@@ -48,4 +83,3 @@
     height: 100vh;
     /* z-index: 9999; */
 }
-
