--- a/templates/index.html
+++ b/templates/index.html
@@ -11,69 +11,72 @@
         <h1>Battleship</h1>
     </div>
 
-    <div class="container">
-        <div class="player">
-            <h2>Player One</h2>
-            <div class="hits-misses">
-                <span>Hits: <span id="p1-hits">0</span></span> |
-                <span>Misses: <span id="p1-miss">0</span></span>
+
+    <div class="game-grid">
+
+        <div id="your-board-label">Your Board</div>
+        <!-- Boards for placing ships and attacking -->
+        <div class="board self" id="p1self"></div>
+        <div class="board self" id="p2self" style="display: none;"></div>
+
+
+        <div class="middle-section">
+            <div class="player-turn-label" id="player-turn"><h3>Decide Number of Ships</h3></div>
+            <div class="player-info">
+                <h3>Player 1</h3>
+                <p>Hits: <span id="p1-hits">0</span></p>
+                <p>Misses: <span id="p1-miss">0</span></p>
+                <p>Ships: <span id="p1-ships-left">0</span></p>
             </div>
+            <div class="player-info">
+                <h3>Player 2</h3>
+                <p>Hits: <span id="p2-hits">0</span></p>
+                <p>Misses: <span id="p2-miss">0</span></p>
+                <p>Ships: <span id="p2-ships-left">0</span></p>
+            </div>
+            <button id="end-turn" style="display: none;">End Turn</button>
         </div>
 
-        <div class="player">
-            <h2>Player Two</h2>
-            <div class="hits-misses">
-                <span>Hits: <span id="p2-hits">0</span></span> |
-                <span>Misses: <span id="p2-miss">0</span></span>
-            </div>
+        <div id="opponent-board-label">Opponent's Board</div>
+
+        <div class="board op" id="p1opponent"></div>
+        <div class="board op" id="p2opponent" style="display: none;"></div>
+
+        <div id="controls">
+            <h2>Place Your Ships</h2>
+            <label id="ship-length-label" for="ship-length">Number of Ships:</label>
+            <select id="ship-length">
+                <option value="1">1: 1x1</option>
+                <option value="2">2: 1x1, 1x2</option>
+                <option value="3">3: 1x1, 1x2, 1x3</option>
+                <option value="4">4: 1x1, 1x2, 1x3, 1x4</option>
+                <option value="5">5: 1x1, 1x2, 1x3, 1x4, 1x5</option>
+            </select>
+    
+            <p id="ship-placement-status"></p>
+    
+            <button id="shipConfirm">Confirm</button>
+            <br><br>
+    
+            <label for="start-coord" id="start-coord-label" style="display: none">Starting Coordinate (e.g., A1):</label>
+            <input type="text" id="start-coord" placeholder="A1" style="display: none">
+            <br><br>
+    
+            <label for="direction" id="direction-label" style="display: none">Direction:</label>
+            <select id="direction" style="display: none">
+                <option value="horizontal">Horizontal</option>
+                <option value="vertical">Vertical</option>
+            </select>
+            <br><br>
+    
+            <button id="place-ship" style="display: none;">Place Ship</button>
+            <button id="next-player-place-ship" style="display: none;" disabled>Player 1 End Placing Ships</button>
+            <button id="start-game" style="display: none;" disabled>Start Attack Phase</button>
         </div>
     </div>
 
-
-    <!-- Board for placing ships and attacking -->
-    <div class="board-wrapper" id="p1-wrapper">
-        <div class="board" id="p1self"></div>
-	    <div class="board" id="p1opponent"></div>
-    </div>
-
-    <div class="board-wrapper" id="p2-wrapper" style="display: none;">
-        <div class="board" id="p2self"></div>
-	    <div class="board" id="p2opponent"></div>
-    </div>
 
     <!-- Ship Placement Controls -->
-    <div id="controls">
-        <h2>Place Your Ships</h2>
-        <label id="ship-length-label" for="ship-length">Number of Ships:</label>
-        <select id="ship-length">
-            <option value="1">1: 1x1</option>
-            <option value="2">2: 1x1, 1x2</option>
-            <option value="3">3: 1x1, 1x2, 1x3</option>
-            <option value="4">4: 1x1, 1x2, 1x3, 1x4</option>
-            <option value="5">5: 1x1, 1x2, 1x3, 1x4, 1x5</option>
-        </select>
-
-        <p id="ship-placement-status"></p>
-
-        <button id="shipConfirm">Confirm</button>
-        <br><br>
-
-        <label for="start-coord" id="start-coord-label" style="display: none">Starting Coordinate (e.g., A1):</label>
-        <input type="text" id="start-coord" placeholder="A1" style="display: none">
-        <br><br>
-
-        <label for="direction" id="direction-label" style="display: none">Direction:</label>
-        <select id="direction" style="display: none">
-            <option value="horizontal">Horizontal</option>
-            <option value="vertical">Vertical</option>
-        </select>
-        <br><br>
-
-        <button id="place-ship" style="display: none;">Place Ship</button>
-        <button id="next-player-place-ship" style="display: none;" disabled>Player 1 End Placing Ships</button>
-        <button id="start-game" style="display: none;" disabled>Start Attack Phase</button>
-    </div>
-    <button id="end-turn" style="display: none;">End Turn</button>
 
     <div id="win-modal" class="modal">
         <div class="modal-content">
@@ -84,10 +87,12 @@
 
     <canvas id="fireworksCanvas"></canvas>
     
-    <script src="/static/js/Player.js"></script>
+    <script src="/static/js/player.js"></script>
     <script src="/static/js/game.js"></script>
     <script src="/static/js/board.js"></script>
     <script src="/static/js/turnSystem.js"></script>
     <script src="/static/js/fireworks.js"></script>
+    <script src="/static/js/animations.js"></script>
+    <script src="/static/js/sfx.js"></script>
 </body>
 </html>
