--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,8 @@
             <button id="end-turn" style="display: none;">End Turn</button>
         </div>
 
+        <span id="text-alert" style="display: none;">alert text</span>
+
         <div id="opponent-board-label">Opponent's Board</div>
 
         <div class="board op" id="p1opponent"></div>
