comments for css/html

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+<!-- 
+    Battleship Game
+    This file handles many of the UI elements for the battleship game inluding the boards,
+    scoreboard, and all of the controls.
+    Inputs: /static/js/player.js /static/js/game.js /static/js/board.js /static/js/turnSystem.js
+    /static/js/fireworks.js /static/js/animations.js /static/js/sfx.js
+    Outputs: Controls, scoreboard, alerts, game status, pass screen, game board
+    Authors: Henry Chaffin, Kenny Meade, Chris Harvey
+    09/09/2024
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -18,7 +28,9 @@
             <div id="start-game-prompt">
                 <button id="start-game-button">Start Game</button>
             </div>
+	    <!-- Game controls for ship placement-->
             <div id="controls" style="display: none;">
+		<!-- Ship size selection-->
                 <label id="ship-length-label" for="ship-length">Choose Setting</label>
                 <select id="ship-length">
                     <option value="1">1: 1x1</option>
@@ -30,6 +42,7 @@
                 <p id="ship-placement-status"></p>
                 <button id="shipConfirm">Confirm</button>
                 <br><br>
+		<!-- Controls for coordinate and direction -->
                 <label for="start-coord" id="start-coord-label" style="display: none">Starting Coordinate:</label>
                 <input type="text" id="start-coord" placeholder="A1" style="display: none">
                 <br><br>
@@ -38,11 +51,13 @@
                     <option value="horizontal">Horizontal</option>
                     <option value="vertical">Vertical</option>
                 </select>
+		<!-- Buttons for placing ships, switching players, and starting the attack phase -->
                 <br><br>
                 <button id="place-ship" style="display: none;">Place Ship</button>
                 <button id="next-player-place-ship" style="display: none;" disabled>Player 1 End Placing Ships</button>
                 <button id="start-game" style="display: none;" disabled>Start Attack Phase</button>
             </div>
+	    <!-- Scoreboard to show hits/misses and remaining ships -->
             <div id="scoreboard" style="display: none;">
                 <h3>Player 1</h3>
                 <p>Hits: <span id="p1-hits">0</span></p>
@@ -53,7 +68,9 @@
                 <p>Misses: <span id="p2-miss">0</span></p>
                 <p>Ships: <span id="p2-ships-left">0</span></p>
             </div>
+	    <!-- End turn button -->
             <button id="end-turn" style="display: none;">End Turn</button>
+	    <!-- Winner screen for each player -->
             <div id="p1-winner-screen" style="display: none;">
                 <button id="play-again-button-1">Play Again</button>
             </div>
@@ -62,12 +79,14 @@
             </div>
         </div>
 
+	<!-- Text alert placeholder -->
         <span id="text-alert" style="display: none;">alert text</span>
 
+	<!-- Opponent boards for each player-->
         <div class="board op" id="p1opponent"></div>
         <div class="board op" id="p2opponent" style="display: none;"></div>
-
-
+	
+	<!-- Pass screen -->
         <div id='pass-screen' style='display: none;'>
             <h2></h2>
             <button id='pass'>Pass</button>
@@ -75,6 +94,7 @@
     </div>
     <!-- Ship Placement Controls -->
 
+     <!-- Game-over screen -->
     <div id="win-modal" class="modal">
         <div class="modal-content">
             <span id="winner-message"></span>
@@ -82,8 +102,10 @@
         </div>
     </div>
 
+    <!-- Fireworks canvas -->
     <canvas id="fireworksCanvas"></canvas>
     
+    <!-- External JS files -->
     <script src="/static/js/player.js"></script>
     <script src="/static/js/game.js"></script>
     <script src="/static/js/board.js"></script>
