--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,16 @@
+/*
+    Battleship Game CSS Stylesheet
+    This file contains the styling for the battleship games UI components
+    including the game boards, pass screen, and scoreboard.
+    It also includes styles for the game modal, hit/miss indicators, and the fireworks display.
+    Inputs: None
+    Outputs: Game grid layout, pass screen styles, hit/miss indicators, 
+    player boards, modal styles, fireworks display
+    Authors: Henry Chaffin, Kenny Meade, Chris Harvey
+    09/09/2024
+*/
+
+/* center the body */
 body {
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
@@ -98,6 +111,7 @@ body {
     grid-column: 3; /* Place the controls in column 3 */
     grid-row: 1; /* Row 1 */
 }
+/* individual cells on the board */
 .cell {
     width: 50px;
     height: 50px;
@@ -157,9 +171,11 @@ body {
     text-align: center;
     line-height: 30px;
 }
+/* color change red if hit */
 .hit {
     background-color: red !important;
 }
+/* color change black if miss */
 .miss {
     background-color: black !important;
 }
@@ -189,6 +205,7 @@ body {
     transform: translate(-50%, -50%); /* Center the dot */
     z-index: 10;  /* Ensure the dot is above the background */
 }
+/* Gray if ship in this cell */
 .placed {
     background-color: gray !important;
     position: relative;
@@ -207,6 +224,7 @@ body {
     justify-content: center;
     align-items: center;
 }
+/* Modal content */
 .modal-content {
     background-color: rgba(0, 0, 0, 0.1);
     padding: 20px;
