--- a/templates/index.html
+++ b/templates/index.html
@@ -70,6 +70,7 @@
             </div>
 	    <!-- End turn button -->
             <button id="end-turn" style="display: none;">End Turn</button>
+            <span id="text-alert" style="display: none;">alert text</span>
 	    <!-- Winner screen for each player -->
             <div id="p1-winner-screen" style="display: none;">
                 <button id="play-again-button-1">Play Again</button>
